# scRANGE

./: .gitattributes  .gitignore  README.md  environment.yml  kMST.py  pyproject.toml  read_data.py  revisar_simulados.ipynb
AE-GMM/: MR_run_GMM.py  NN_GMM.py  NN_run_GMM.py  environment.yml  layers.py
Correlations/: .gitignore
Data/Epilepsy/: barcodes.tsv  clusters.xlsx  matrix.mtx
Data/Non Simulated/HumanLiver/: genes.tsv
Data/Non Simulated/MouseBladder/: cluster.csv
Data/Non Simulated/MouseRetina/: barcodes.tsv
Data/Non Simulated/WormNeuron/: barcodes.tsv  genes.tsv
Data/Simulated/: process.ipynb
Java/data/: exampleMatrix.txt  exampleTwoGroups.txt
Java/src/: DisjointSets.java  JaccardBestCountsSamplesMatrixAlgorithm.java  KMSTWeightedGraphGenerator.java  WeightedGraphClusteringAlgorithm.java
data/Epilepsy/: clusters.tsv
data/HumanProteinAtlas/: rna_single_cell_type_tissue.tsv
kMST/: kMST.py
src/: CellRangerCount.java  CellRangerMatrixFileReader.java  ConcatGZIPInputStream.java  ConnectedComponentsClusteringAlgorithm.java  H5Loader.java  LouvainClusteringAlgorithm.java  PearsonCorrelationSamplesMatrixAlgorithm.java  SCRNADataProcessor.java  ScRNAMatrix.java  SimpleThresholdWeightedGraphGenerator.java  WeightedGraphGenerator.java  scRANGE.py
src/AE_GMM/: NN_GMM.py  NN_run_GMM.py  preprocess.py
src/Correlations/: compute_correlations.py
src/correlations/: compute_correlations.py
src/scDCC/: layers.py  preprocess.py  scDCC.py  scDCC_run.py  utils.py
src/utils/: metrics.py  read_data.py
utils/: metrics.py
(+218 files in other folders)
