[project]
name = "scrange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "matplotlib==3.7.1",
    "networkx==2.8.4",
    "numpy==1.23.5",
    "pandas==1.5.2",
    "scanpy==1.9.3",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "torch==2.0.1",
    "tqdm==4.65.0",
]
